# oloko64-dev-email-sender-rust

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust.yml
src/: main.rs  responses.rs  routes.rs  telegram.rs  utils.rs
