[package]
name = "email-sender-rust"
version = "0.3.100"
edition = "2021"
rust-version = "1.72.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
strip = true

[dependencies]
dotenvy = "0.15.7"
sendgrid_thin = { version = "0.4.5", default-features = false }
sentry = "0.32.2"
serde = { version = "1.0.196", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_json = "1.0.113"
reqwest = "0.11.24"
unicode-segmentation = "1.10.1"
tokio = "1.36.0"
axum = "0.7.4"
tracing = "0.1.40"
lambda_http = "0.9.2"
lambda_runtime = "0.9.1"
tower-http = { version = "0.5.1", features = [
    "catch-panic",
    "cors",
    "trace",
    "normalize-path",
] }
