[package]
name = "email-sender-rust"
version = "0.3.200"
edition = "2021"
rust-version = "1.72.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
strip = true

[dependencies]
# This openssl with "vendored" is necessary because the default OpenSSL library is not built for the target architecture (x86_64-unknown-linux-musl)
openssl = { version = "0.10.68", features = ["vendored"] }
dotenvy = "0.15.7"
sendgrid_thin = { version = "0.5.100", default-features = false }
sentry = "0.36.0"
serde = { version = "1.0.217", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde_json = "1.0.137"
reqwest = "0.12.12"
unicode-segmentation = "1.12.0"
tokio = "1.43.0"
axum = "0.8.1"
tracing = "0.1.41"
lambda_http = "0.14.0"
lambda_runtime = "0.13.0"
tower-http = { version = "0.6.2", features = [
    "catch-panic",
    "cors",
    "trace",
    "normalize-path",
] }
