[package]
name = "email-sender-rust"
version = "0.3.200"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
strip = true

[dependencies]
# This openssl with "vendored" is necessary because the default OpenSSL library is not built for the target architecture (x86_64-unknown-linux-musl)
openssl = { version = "0.10.75", features = ["vendored"] }
dotenvy = "0.15.7"
sendgrid_thin = { version = "0.5.100", default-features = false }
sentry = "0.46.0"
serde = { version = "1.0.228", features = ["derive"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde_json = "1.0.148"
reqwest = { version = "0.13.1", features = ["json"] }
unicode-segmentation = "1.12.0"
tokio = "1.48.0"
axum = "0.8.8"
tracing = "0.1.44"
lambda_http = "1.0.2"
lambda_runtime = "1.0.2"
tower-http = { version = "0.6.8", features = [
    "catch-panic",
    "cors",
    "trace",
    "normalize-path",
] }
